gccida/c1/print_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_value/src/sched-vis.c:1039:15: error: use of undeclared identifier 'off_6D4004'
sprintf( v14, off_6D4004, rtuint); 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_value/src/sched-vis.c:1047:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( unsigned __int8 *)reg_names[rtuint]] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_value/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_value/src/sched-vis.c:1058:15: error: use of undeclared identifier 'off_6E3423'
sprintf( v14, off_6E3423, *( _DWORD *)&x[1]); 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_value/src/sched-vis.c:1068:31: error: use of undeclared identifier 'off_6D3FF3'
sprintf( v14, ( const char *)&off_6D3FF3, *( unsigned int *)( x->fld[0].rtwint + 8)); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_value/src/obj/sched-vis.o] Error 1
